<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="?android:windowBackground"
    tools:context=".Info">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo_tree_record"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informacoes"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_text"
            android:textSize="16sp"
            android:lineSpacingExtra="6dp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/btn_back_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar" />
    </LinearLayout>
</ScrollView>