<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Ícone canto superior esquerdo -->
    <ImageButton

        android:id="@+id/iconTopLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="5dp"
        android:importantForAccessibility="no"/>

    <!-- Ícone canto superior direito -->
    <ImageButton
        android:id="@+id/iconTopRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        android:importantForAccessibility="no"/>



    <!-- Botão 1 -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="193dp"
        android:layout_height="162dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo_tree_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconTopLeft" />



    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button2"
        android:importantForAccessibility="no"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/b1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:importantForAccessibility="no"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        android:importantForAccessibility="no"/>

    <ImageButton
        android:id="@+id/iconBottomLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        android:importantForAccessibility="no"/>



</androidx.constraintlayout.widget.ConstraintLayout>
